@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,8 @@ import java.awt.image.BufferedImage;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.Collections;
@@ -41,6 +42,8 @@ import org.openhab.core.automation.annotation.RuleAction;
 import org.openhab.core.thing.binding.ThingActions;
 import org.openhab.core.thing.binding.ThingActionsScope;
 import org.openhab.core.thing.binding.ThingHandler;
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.ServiceScope;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -54,6 +57,7 @@ import com.google.gson.JsonParser;
  * @author Sebastian Prehn - Initial contribution
  * @author Laurent Garnier - new method invokeMethodOf + interface ILGWebOSActions
  */
+@Component(scope = ServiceScope.PROTOTYPE, service = LGWebOSActions.class)
 @ThingActionsScope(name = "lgwebos")
 @NonNullByDefault
 public class LGWebOSActions implements ThingActions {
@@ -97,11 +101,11 @@ public class LGWebOSActions implements ThingActions {
     public void showToast(
             @ActionInput(name = "icon", label = "@text/actionShowToastInputIconLabel", description = "@text/actionShowToastInputIconDesc") String icon,
             @ActionInput(name = "text", label = "@text/actionShowToastInputTextLabel", description = "@text/actionShowToastInputTextDesc") String text)
-            throws IOException {
-        BufferedImage bi = ImageIO.read(new URL(icon));
+            throws IOException, URISyntaxException {
+        BufferedImage bi = ImageIO.read(new URI(icon).toURL());
         try (ByteArrayOutputStream os = new ByteArrayOutputStream(); OutputStream b64 = Base64.getEncoder().wrap(os)) {
             ImageIO.write(bi, "png", b64);
-            String string = os.toString(StandardCharsets.UTF_8.name());
+            String string = os.toString(StandardCharsets.UTF_8);
             getConnectedSocket().ifPresent(control -> control.showToast(text, string, "png", createResponseListener()));
         }
     }
@@ -223,7 +227,7 @@ public class LGWebOSActions implements ThingActions {
     }
 
     private ResponseListener<TextInputStatusInfo> createTextInputStatusListener() {
-        return new ResponseListener<TextInputStatusInfo>() {
+        return new ResponseListener<>() {
 
             @Override
             public void onError(@Nullable String error) {
@@ -238,7 +242,7 @@ public class LGWebOSActions implements ThingActions {
     }
 
     private <O> ResponseListener<O> createResponseListener() {
-        return new ResponseListener<O>() {
+        return new ResponseListener<>() {
 
             @Override
             public void onError(@Nullable String error) {
@@ -258,7 +262,8 @@ public class LGWebOSActions implements ThingActions {
         ((LGWebOSActions) actions).showToast(text);
     }
 
-    public static void showToast(ThingActions actions, String icon, String text) throws IOException {
+    public static void showToast(ThingActions actions, String icon, String text)
+            throws IOException, URISyntaxException {
         ((LGWebOSActions) actions).showToast(icon, text);
     }
 
